trunk/Archive2/89/200ea62372503d/output
main.cpp:4:22: error: 'literals' is not a namespace-name
 using namespace std::literals;
                      ^
main.cpp:4:30: error: expected namespace-name before ';' token
 using namespace std::literals;
                              ^
main.cpp: In function 'int main()':
main.cpp:8:13: error: unable to find string literal operator 'operator"" s'
    auto a = "2300"s;
             ^
main.cpp:10:21: error: parameter declared 'auto'
    auto b = [](auto d) {
                     ^
main.cpp: In lambda function:
main.cpp:11:28: error: 'd' was not declared in this scope
       auto t = std::stoull(d);
                            ^
